[gd_scene load_steps=7 format=3 uid="uid://2vjnyrv2x5s"]

[ext_resource type="Script" path="res://Script/pipe_pair.gd" id="1_sgarp"]
[ext_resource type="Texture2D" uid="uid://cl0da1jjbmb16" path="res://Assets/Assets_Master/Untitled71_20230725105316.png" id="2_7vyil"]
[ext_resource type="AudioStream" uid="uid://5jr0yyum4t4e" path="res://Assets/Audio/point.wav" id="3_q336q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ins4f"]
size = Vector2(107, 725)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_26shd"]
size = Vector2(106, 727)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6lng"]
size = Vector2(70, 250)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_sgarp")

[node name="TopPipe" type="Area2D" parent="."]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -500)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_7vyil")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0.5, -493.5)
shape = SubResource("RectangleShape2D_ins4f")

[node name="BottomPipe" type="Area2D" parent="."]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 500)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_7vyil")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(-1, 496.5)
shape = SubResource("RectangleShape2D_26shd")

[node name="Scored" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
shape = SubResource("RectangleShape2D_d6lng")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q336q")

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Scored" to="." method="_on_mom_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
